changed font and fixed text overflow

--- a/src/app/components/add-task/add-task.component.scss
+++ b/src/app/components/add-task/add-task.component.scss
@@ -12,6 +12,10 @@ form {
     transition: all 200ms;
     opacity: 0.5;
     cursor: text;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .form-control:focus + .form-control-placeholder,
