--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -3,7 +3,7 @@ $font-size: 16px;
 $font-scale: 1;
 $line-height: 1.6875;
 
-$font-family: 'Lato', sans-serif;
+$font-family: sans-serif;
 
 html,
 body,
