--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,3 +21,6 @@ body {
 .flex {
   display: flex;
 }
+.flex-wrap {
+  flex-wrap: wrap;
+}
